--- a/style.css
+++ b/style.css
@@ -1,9 +1,66 @@
 body{
+    margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .name-highlight{
     color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding: 2%;
+
+}
+.half-width img{
+    width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.my-button{
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    background-image: linear-gradient(70deg, salmon, orange);
+    padding: 10px 25px;
+    border-radius: 5px;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.single-exp{
+    height: 60%;
+    box-shadow: 10px 10px 40px grey;
+}
+#wd{
+    border-left: 7px solid;
+    border-image: linear-gradient(lightSalmon, orange);
+    border-image-slice: 1;
+}
+#dm{
+    border-left: 7px solid;
+    border-image: linear-gradient(45deg, blue, rgb(20, 20, 99));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
